--- a/_sass/yolo/brand/theme/_dusk.scss
+++ b/_sass/yolo/brand/theme/_dusk.scss
@@ -1,4 +1,10 @@
 // ----------------------------------------------------------------------------
+// dusk font-families
+// ----------------------------------------------------------------------------
+$font-family-primary: "Urbanist", sans-serif;
+$font-family-secondary: "Montserrat", sans-serif;
+$font-family-monospace: "Roboto Mono", monospace;
+// ----------------------------------------------------------------------------
 // dusk light-mode
 // ----------------------------------------------------------------------------
 // primary colors
@@ -7,19 +13,15 @@ $light-on-primary-color: #20142e;
 $light-primary-container-color: #380749;
 $light-on-primary-container-color: #f45e02;
 // secondary colors  
-$light-secondary-color: #d40278;
+$light-secondary-color: #ff6d00;
 $light-on-secondary-color: #fcd9ef;
 $light-secondary-container-color: #2e2157;
 $light-on-secondary-container-color: #ffd0b2;
 // tertiary colors  
-$light-tertiary-color: #f45e02;
+$light-tertiary-color: #d40278;
 $light-on-tertiary-color: #fff3eb;
 // link colors
 $light-link-color: #00a0ff;
-// font families  
-$light-font-family-primary: "Red Hat Mono", monospace;
-$light-font-family-secondary: "Red Hat Text", sans-serif;
-$light-font-family-monospace: "Source Code Pro", monospace;
 // ----------------------------------------------------------------------------
 // dusk dark-mode
 // ----------------------------------------------------------------------------
@@ -29,16 +31,12 @@ $dark-on-primary-color: #f549b3;
 $dark-primary-container-color: #460a5b;
 $dark-on-primary-container-color: #fe6c11;
 // secondary colors  
-$dark-secondary-color: #b5036a;
+$dark-secondary-color: #ff6d00;
 $dark-on-secondary-color: #0d0221;
 $dark-secondary-container-color: #2e2157;
 $dark-on-secondary-container-color: #ffd0b2;
 // tertiary colors  
-$dark-tertiary-color: #fe6c11;
+$dark-tertiary-color: #b5036a;
 $dark-on-tertiary-color: #0d0221;
 // link colors
 $dark-link-color: #b2feff;
-// font families  
-$dark-font-family-primary: "Red Hat Mono", monospace;
-$dark-font-family-secondary: "Red Hat Text", sans-serif;
-$dark-font-family-monospace: "Source Code Pro", monospace;
