--- a/_sass/yolo/brand/theme/_mint.scss
+++ b/_sass/yolo/brand/theme/_mint.scss
@@ -1,4 +1,10 @@
 // ----------------------------------------------------------------------------
+// mint font-families
+// ----------------------------------------------------------------------------
+$font-family-primary: "Poppins", sans-serif;
+$font-family-secondary: "Red Hat Text", sans-serif;
+$font-family-monospace: "Source Code Pro", monospace;
+// ----------------------------------------------------------------------------
 // mint light-mode
 // ----------------------------------------------------------------------------
 // primary colors
@@ -16,10 +22,6 @@ $light-tertiary-color: #008343;
 $light-on-tertiary-color: #f4fff4;
 // link colors
 $light-link-color: #000;
-// font families
-$light-font-family-primary: "Poppins", sans-serif;
-$light-font-family-secondary: "Red Hat Text", sans-serif;
-$light-font-family-monospace: "Source Code Pro", monospace;
 // ----------------------------------------------------------------------------
 // mint dark-mode
 // ----------------------------------------------------------------------------
@@ -38,7 +40,3 @@ $dark-tertiary-color: #11ff89;
 $dark-on-tertiary-color: #00a344;
 // link colors
 $dark-link-color: #000;
-// font families
-$dark-font-family-primary: "Poppins", sans-serif;
-$dark-font-family-secondary: "Red Hat Text", sans-serif;
-$dark-font-family-monospace: "Source Code Pro", monospace;
