--- a/_sass/yolo/brand/theme/_newspaper.scss
+++ b/_sass/yolo/brand/theme/_newspaper.scss
@@ -1,4 +1,10 @@
 // ----------------------------------------------------------------------------
+// newspaper font-families
+// ----------------------------------------------------------------------------
+$font-family-primary: "Hepta Slab", serif;
+$font-family-secondary: "Poppins", sans-serif;
+$font-family-monospace: "IBM Plex Mono", monospace;
+// ----------------------------------------------------------------------------
 // newspaper light-mode
 // ----------------------------------------------------------------------------
 // primary colors
@@ -16,10 +22,6 @@ $light-tertiary-color: #0091ea;
 $light-on-tertiary-color: #e0e0e0;
 // link colors
 $light-link-color: #f72685;
-// font families
-$light-font-family-primary: "Hepta Slab", serif;
-$light-font-family-secondary: "Red Hat Text", sans-serif;
-$light-font-family-monospace: "Red Hat Mono", monospace;
 // ----------------------------------------------------------------------------
 // newspaper dark-mode
 // ----------------------------------------------------------------------------
@@ -38,7 +40,3 @@ $dark-tertiary-color: #0091ea;
 $dark-on-tertiary-color: #e0e0e0;
 // link colors
 $dark-link-color: #f72685;
-// font families
-$dark-font-family-primary: "Hepta Slab", serif;
-$dark-font-family-secondary: "Red Hat Text", sans-serif;
-$dark-font-family-monospace: "Red Hat Mono", monospace;
