--- a/_sass/yolo/brand/theme/_zoot.scss
+++ b/_sass/yolo/brand/theme/_zoot.scss
@@ -1,4 +1,10 @@
 // ----------------------------------------------------------------------------
+// zoot font-families
+// ----------------------------------------------------------------------------
+$font-family-primary: "Red Hat Text", sans-serif;
+$font-family-secondary: "Red Hat Display", sans-serif;
+$font-family-monospace: "Red Hat Mono", monospace;
+// ----------------------------------------------------------------------------
 // zoot light-mode
 // ----------------------------------------------------------------------------
 // primary colors
@@ -16,10 +22,6 @@ $light-tertiary-color: #d90529;
 $light-on-tertiary-color: #edf2f4;
 // link colors
 $light-link-color: #ef243c;
-// font families
-$light-font-family-primary: "Red Hat Text", sans-serif;
-$light-font-family-secondary: "Red Hat Text", sans-serif;
-$light-font-family-monospace: "Red Hat Mono", monospace;
 // ----------------------------------------------------------------------------
 // zoot dark-mode
 // ----------------------------------------------------------------------------
@@ -38,7 +40,3 @@ $dark-tertiary-color: #fa1137;
 $dark-on-tertiary-color: #101119;
 // link colors
 $dark-link-color: #32cdff;
-// font families
-$dark-font-family-primary: "Red Hat Text", sans-serif;
-$dark-font-family-secondary: "Red Hat Text", sans-serif;
-$dark-font-family-monospace: "Red Hat Mono", monospace;
