--- a/_sass/yolo/brand/syntax/_yolo.scss
+++ b/_sass/yolo/brand/syntax/_yolo.scss
@@ -1,158 +1,158 @@
 // ----------------------------------------------------------------------------
 // yolo light-mode syntax theme
 // ----------------------------------------------------------------------------
-$light-syntax-comment-hashbang: #b5036a;
-$light-syntax-comment-multiline: #b5036a;
-$light-syntax-comment-preproc: #b5036a;
-$light-syntax-comment-preprocfile: #b5036a;
-$light-syntax-comment-single: #b5036a;
-$light-syntax-comment-special: #b5036a;
-$light-syntax-comment: #b5036a;
-$light-syntax-container-color: #040511;
+$light-syntax-container-color: #ebfff0;
+$light-syntax-text: #080836;
+$light-syntax-comment-hashbang: #44475a;
+$light-syntax-comment-multiline: #44475a;
+$light-syntax-comment-preproc: #44475a;
+$light-syntax-comment-preprocfile: #44475a;
+$light-syntax-comment-single: #44475a;
+$light-syntax-comment-special: #44475a;
+$light-syntax-comment: #44475a;
 $light-syntax-error: #b71c1c;
 $light-syntax-generic-deleted: #b71c1c;
-$light-syntax-generic-emph: #ecedff;
-$light-syntax-generic-error: #ecedff;
-$light-syntax-generic-heading: #ecedff;
-$light-syntax-generic-inserted: #ecedff;
-$light-syntax-generic-output: #ecedff;
-$light-syntax-generic-prompt: #ffab40;
-$light-syntax-generic-strong: #ffab40;
-$light-syntax-generic-subheading: #ecedff;
-$light-syntax-generic-traceback: #ecedff;
+$light-syntax-generic-emph: #080836;
+$light-syntax-generic-error: #080836;
+$light-syntax-generic-heading: #080836;
+$light-syntax-generic-inserted: #080836;
+$light-syntax-generic-output: #080836;
+$light-syntax-generic-prompt: #00a42c;
+$light-syntax-generic-strong: #00a42c;
+$light-syntax-generic-subheading: #080836;
+$light-syntax-generic-traceback: #080836;
 $light-syntax-highlight-line: #44475a;
-$light-syntax-keyword-constant: #fb1d9e;
+$light-syntax-keyword-constant: #13137d;
 $light-syntax-keyword-declaration: #0ca9f4;
-$light-syntax-keyword-namespace: #fb1d9e;
-$light-syntax-keyword-pseudo: #fb1d9e;
-$light-syntax-keyword-reserved: #fb1d9e;
+$light-syntax-keyword-namespace: #13137d;
+$light-syntax-keyword-pseudo: #13137d;
+$light-syntax-keyword-reserved: #13137d;
 $light-syntax-keyword-type: #0ca9f4;
-$light-syntax-keyword: #fb1d9e;
-$light-syntax-literal-date: #ecedff;
-$light-syntax-literal: #ecedff;
-$light-syntax-name-attribute: #50fa7b;
-$light-syntax-name-builtin-pseudo: #d2d2f3;
+$light-syntax-keyword: #13137d;
+$light-syntax-literal-date: #080836;
+$light-syntax-literal: #080836;
+$light-syntax-name-attribute: #00c032;
+$light-syntax-name-builtin-pseudo: #080836;
 $light-syntax-name-builtin: #0ca9f4;
-$light-syntax-name-class: #50fa7b;
-$light-syntax-name-constant: #ecedff;
-$light-syntax-name-decorator: #ecedff;
-$light-syntax-name-entity: #ecedff;
-$light-syntax-name-exception: #ecedff;
-$light-syntax-name-function-magic: #50fa7b;
-$light-syntax-name-function: #50fa7b;
-$light-syntax-name-label: #50fa7b;
-$light-syntax-name-namespace: #ecedff;
-$light-syntax-name-other: #ecedff;
-$light-syntax-name-property: #50fa7b;
-$light-syntax-name-tag: #fb1d9e;
+$light-syntax-name-class: #00c032;
+$light-syntax-name-constant: #080836;
+$light-syntax-name-decorator: #080836;
+$light-syntax-name-entity: #080836;
+$light-syntax-name-exception: #080836;
+$light-syntax-name-function-magic: #00c032;
+$light-syntax-name-function: #00c032;
+$light-syntax-name-label: #00c032;
+$light-syntax-name-namespace: #080836;
+$light-syntax-name-other: #080836;
+$light-syntax-name-property: #00c032;
+$light-syntax-name-tag: #13137d;
 $light-syntax-name-variable-class: #0ca9f4;
 $light-syntax-name-variable-global: #0ca9f4;
 $light-syntax-name-variable-instance: #0ca9f4;
 $light-syntax-name-variable-magic: #0ca9f4;
 $light-syntax-name-variable: #0ca9f4;
-$light-syntax-name: #ecedff;
-$light-syntax-number-bin: #ffab40;
-$light-syntax-number-float: #ffab40;
-$light-syntax-number-hex: #ffab40;
-$light-syntax-number-integer-long: #ffab40;
-$light-syntax-number-integer: #ffab40;
-$light-syntax-number-oct: #ffab40;
-$light-syntax-number: #ffab40;
-$light-syntax-operator-word: #50fa7b;
-$light-syntax-operator: #50fa7b;
+$light-syntax-name: #080836;
+$light-syntax-number-bin: #00a42c;
+$light-syntax-number-float: #00a42c;
+$light-syntax-number-hex: #00a42c;
+$light-syntax-number-integer-long: #00a42c;
+$light-syntax-number-integer: #00a42c;
+$light-syntax-number-oct: #00a42c;
+$light-syntax-number: #00a42c;
+$light-syntax-operator-word: #00c032;
+$light-syntax-operator: #00c032;
 $light-syntax-punctuation: #0ca9f4;
 $light-syntax-string-affix: #7c85fa;
 $light-syntax-string-backtick: #7c85fa;
 $light-syntax-string-char: #7c85fa;
 $light-syntax-string-delimiter: #7c85fa;
 $light-syntax-string-doc: #7c85fa;
-$light-syntax-string-double: #65cffc;
+$light-syntax-string-double: #1818a2;
 $light-syntax-string-escape: #7c85fa;
 $light-syntax-string-heredoc: #7c85fa;
 $light-syntax-string-interpol: #7c85fa;
-$light-syntax-string-other: #65cffc;
+$light-syntax-string-other: #1818a2;
 $light-syntax-string-regex: #7c85fa;
-$light-syntax-string-single: #65cffc;
+$light-syntax-string-single: #1818a2;
 $light-syntax-string-symbol: #7c85fa;
 $light-syntax-string: #7c85fa;
-$light-syntax-text-whitespace: #d2d2f3;
-$light-syntax-text: #d2d2f3;
+$light-syntax-text-whitespace: #080836;
 // ----------------------------------------------------------------------------
 // yolo dark-mode syntax theme
 // ----------------------------------------------------------------------------
-$dark-syntax-comment-hashbang: #b5036a;
-$dark-syntax-comment-multiline: #b5036a;
-$dark-syntax-comment-preproc: #b5036a;
-$dark-syntax-comment-preprocfile: #b5036a;
-$dark-syntax-comment-single: #b5036a;
-$dark-syntax-comment-special: #b5036a;
-$dark-syntax-comment: #b5036a;
-$dark-syntax-container-color: #040511;
-$dark-syntax-error: #b71c1c;
-$dark-syntax-generic-deleted: #b71c1c;
-$dark-syntax-generic-emph: #ecedff;
-$dark-syntax-generic-error: #ecedff;
-$dark-syntax-generic-heading: #ecedff;
-$dark-syntax-generic-inserted: #ecedff;
-$dark-syntax-generic-output: #ecedff;
-$dark-syntax-generic-prompt: #ffab40;
-$dark-syntax-generic-strong: #ffab40;
-$dark-syntax-generic-subheading: #ecedff;
-$dark-syntax-generic-traceback: #ecedff;
-$dark-syntax-highlight-line: #44475a;
-$dark-syntax-keyword-constant: #fb1d9e;
+$dark-syntax-container-color: #0d0e59;
+$dark-syntax-text: #b0fdc3;
+$dark-syntax-comment-hashbang: #b3b6c7;
+$dark-syntax-comment-multiline: #b3b6c7;
+$dark-syntax-comment-preproc: #b3b6c7;
+$dark-syntax-comment-preprocfile: #b3b6c7;
+$dark-syntax-comment-single: #b3b6c7;
+$dark-syntax-comment-special: #b3b6c7;
+$dark-syntax-comment: #b3b6c7;
+$dark-syntax-error: #e34545;
+$dark-syntax-generic-deleted: #e34545;
+$dark-syntax-generic-emph: #b0fdc3;
+$dark-syntax-generic-error: #b0fdc3;
+$dark-syntax-generic-heading: #b0fdc3;
+$dark-syntax-generic-inserted: #b0fdc3;
+$dark-syntax-generic-output: #b0fdc3;
+$dark-syntax-generic-prompt: #00a42c;
+$dark-syntax-generic-strong: #00a42c;
+$dark-syntax-generic-subheading: #b0fdc3;
+$dark-syntax-generic-traceback: #b0fdc3;
+$dark-syntax-highlight-line: #b3b6c7;
+$dark-syntax-keyword-constant: #4ffa7b;
 $dark-syntax-keyword-declaration: #0ca9f4;
-$dark-syntax-keyword-namespace: #fb1d9e;
-$dark-syntax-keyword-pseudo: #fb1d9e;
-$dark-syntax-keyword-reserved: #fb1d9e;
+$dark-syntax-keyword-namespace: #4ffa7b;
+$dark-syntax-keyword-pseudo: #4ffa7b;
+$dark-syntax-keyword-reserved: #4ffa7b;
 $dark-syntax-keyword-type: #0ca9f4;
-$dark-syntax-keyword: #fb1d9e;
-$dark-syntax-literal-date: #ecedff;
-$dark-syntax-literal: #ecedff;
-$dark-syntax-name-attribute: #50fa7b;
-$dark-syntax-name-builtin-pseudo: #d2d2f3;
+$dark-syntax-keyword: #4ffa7b;
+$dark-syntax-literal-date: #b0fdc3;
+$dark-syntax-literal: #b0fdc3;
+$dark-syntax-name-attribute: #00c032;
+$dark-syntax-name-builtin-pseudo: #b0fdc3;
 $dark-syntax-name-builtin: #0ca9f4;
-$dark-syntax-name-class: #50fa7b;
-$dark-syntax-name-constant: #ecedff;
-$dark-syntax-name-decorator: #ecedff;
-$dark-syntax-name-entity: #ecedff;
-$dark-syntax-name-exception: #ecedff;
-$dark-syntax-name-function-magic: #50fa7b;
-$dark-syntax-name-function: #50fa7b;
-$dark-syntax-name-label: #50fa7b;
-$dark-syntax-name-namespace: #ecedff;
-$dark-syntax-name-other: #ecedff;
-$dark-syntax-name-property: #50fa7b;
-$dark-syntax-name-tag: #fb1d9e;
+$dark-syntax-name-class: #00c032;
+$dark-syntax-name-constant: #b0fdc3;
+$dark-syntax-name-decorator: #b0fdc3;
+$dark-syntax-name-entity: #b0fdc3;
+$dark-syntax-name-exception: #b0fdc3;
+$dark-syntax-name-function-magic: #00c032;
+$dark-syntax-name-function: #00c032;
+$dark-syntax-name-label: #00c032;
+$dark-syntax-name-namespace: #b0fdc3;
+$dark-syntax-name-other: #b0fdc3;
+$dark-syntax-name-property: #00c032;
+$dark-syntax-name-tag: #4ffa7b;
 $dark-syntax-name-variable-class: #0ca9f4;
 $dark-syntax-name-variable-global: #0ca9f4;
 $dark-syntax-name-variable-instance: #0ca9f4;
 $dark-syntax-name-variable-magic: #0ca9f4;
 $dark-syntax-name-variable: #0ca9f4;
-$dark-syntax-name: #ecedff;
-$dark-syntax-number-bin: #ffab40;
-$dark-syntax-number-float: #ffab40;
-$dark-syntax-number-hex: #ffab40;
-$dark-syntax-number-integer-long: #ffab40;
-$dark-syntax-number-integer: #ffab40;
-$dark-syntax-number-oct: #ffab40;
-$dark-syntax-number: #ffab40;
-$dark-syntax-operator-word: #50fa7b;
-$dark-syntax-operator: #50fa7b;
+$dark-syntax-name: #b0fdc3;
+$dark-syntax-number-bin: #00a42c;
+$dark-syntax-number-float: #00a42c;
+$dark-syntax-number-hex: #00a42c;
+$dark-syntax-number-integer-long: #00a42c;
+$dark-syntax-number-integer: #00a42c;
+$dark-syntax-number-oct: #00a42c;
+$dark-syntax-number: #00a42c;
+$dark-syntax-operator-word: #00c032;
+$dark-syntax-operator: #00c032;
 $dark-syntax-punctuation: #0ca9f4;
 $dark-syntax-string-affix: #7c85fa;
 $dark-syntax-string-backtick: #7c85fa;
 $dark-syntax-string-char: #7c85fa;
 $dark-syntax-string-delimiter: #7c85fa;
 $dark-syntax-string-doc: #7c85fa;
-$dark-syntax-string-double: #65cffc;
+$dark-syntax-string-double: #4ffa7b;
 $dark-syntax-string-escape: #7c85fa;
 $dark-syntax-string-heredoc: #7c85fa;
 $dark-syntax-string-interpol: #7c85fa;
-$dark-syntax-string-other: #65cffc;
+$dark-syntax-string-other: #4ffa7b;
 $dark-syntax-string-regex: #7c85fa;
-$dark-syntax-string-single: #65cffc;
+$dark-syntax-string-single: #4ffa7b;
 $dark-syntax-string-symbol: #7c85fa;
 $dark-syntax-string: #7c85fa;
-$dark-syntax-text-whitespace: #d2d2f3;
-$dark-syntax-text: #d2d2f3;
+$dark-syntax-text-whitespace: #b0fdc3;
