--- a/_sass/yolo/brand/theme/_corbs.scss
+++ b/_sass/yolo/brand/theme/_corbs.scss
@@ -2,7 +2,7 @@
 // corbs font-families
 // ----------------------------------------------------------------------------
 $font-family-primary: "Source Code Pro", monospace;
-$font-family-secondary: "Red Hat Text", sans-serif;
+$font-family-secondary: "Poppins", sans-serif;
 $font-family-monospace: "Red Hat Mono", monospace;
 // ----------------------------------------------------------------------------
 // corbs light-mode
