--- a/_sass/yolo/brand/_theme.scss
+++ b/_sass/yolo/brand/_theme.scss
@@ -257,6 +257,7 @@
   }
 
   .sidebar {
+    font-family: var(--font-family-secondary);
     background-color: var(--primary-container-color);
     color: var(--on-primary-container-color);
     .nav-menu {
@@ -265,10 +266,10 @@
           a {
             color: var(--on-primary-container-color);
             &:hover {
-              color: var(--link-color);
+              color: var(--tertiary-color);
             }
             &:focus {
-              color: var(--link-color);
+              color: var(--tertiary-color);
             }
           }
         }
