--- a/_sass/yolo/brand/syntax/_aloha.scss
+++ b/_sass/yolo/brand/syntax/_aloha.scss
@@ -1,17 +1,17 @@
 // ----------------------------------------------------------------------------
 // aloha light-mode syntax theme
 // ----------------------------------------------------------------------------
-$light-syntax-text: #cbf0f8;
-$light-syntax-container-color: #02033b;
-$light-syntax-comment-hashbang: #fc9867;
-$light-syntax-comment-multiline: #fc9867;
-$light-syntax-comment-preproc: #fc9867;
-$light-syntax-comment-preprocfile: #fc9867;
-$light-syntax-comment-single: #fc9867;
-$light-syntax-comment-special: #fc9867;
-$light-syntax-comment: #fc9867;
-$light-syntax-error: #ff6288;
-$light-syntax-generic-deleted: #ff6288;
+$light-syntax-text: #095c71;
+$light-syntax-container-color: #daf6fc;
+$light-syntax-comment-hashbang: #04045e;
+$light-syntax-comment-multiline: #04045e;
+$light-syntax-comment-preproc: #04045e;
+$light-syntax-comment-preprocfile: #04045e;
+$light-syntax-comment-single: #04045e;
+$light-syntax-comment-special: #04045e;
+$light-syntax-comment: #04045e;
+$light-syntax-error: #f61249;
+$light-syntax-generic-deleted: #f61249;
 $light-syntax-generic-emph: #ff9f00;
 $light-syntax-generic-error: #ff9f00;
 $light-syntax-generic-heading: #ff9f00;
@@ -22,66 +22,66 @@ $light-syntax-generic-strong: #ff9f00;
 $light-syntax-generic-subheading: #ff9f00;
 $light-syntax-generic-traceback: #ff9f00;
 $light-syntax-highlight-line: #ff6d00;
-$light-syntax-keyword-constant: #0bb4d8;
-$light-syntax-keyword-declaration: #0bb4d8;
+$light-syntax-keyword-constant: #1592e1;
+$light-syntax-keyword-declaration: #1592e1;
 $light-syntax-keyword-namespace: #ff9201;
-$light-syntax-keyword-pseudo: #0bb4d8;
-$light-syntax-keyword-reserved: #0bb4d8;
-$light-syntax-keyword-type: #0bb4d8;
-$light-syntax-keyword: #0bb4d8;
+$light-syntax-keyword-pseudo: #1592e1;
+$light-syntax-keyword-reserved: #1592e1;
+$light-syntax-keyword-type: #1592e1;
+$light-syntax-keyword: #1592e1;
 $light-syntax-literal-date: #ff6d00;
 $light-syntax-literal: #ff6d00;
-$light-syntax-name-attribute: #21daff;
-$light-syntax-name-builtin-pseudo: #cbf0f8;
-$light-syntax-name-builtin: #cbf0f8;
-$light-syntax-name-class: #21daff;
+$light-syntax-name-attribute: #0577b6;
+$light-syntax-name-builtin-pseudo: #02033b;
+$light-syntax-name-builtin: #02033b;
+$light-syntax-name-class: #0577b6;
 $light-syntax-name-constant: #0bb4d8;
-$light-syntax-name-decorator: #21daff;
-$light-syntax-name-entity: #cbf0f8;
-$light-syntax-name-exception: #21daff;
-$light-syntax-name-function-magic: #21daff;
-$light-syntax-name-function: #21daff;
-$light-syntax-name-label: #ff9201;
-$light-syntax-name-namespace: #cbf0f8;
-$light-syntax-name-other: #21daff;
-$light-syntax-name-property: #21daff;
-$light-syntax-name-tag: #ff9201;
-$light-syntax-name-variable-class: #cbf0f8;
-$light-syntax-name-variable-global: #cbf0f8;
-$light-syntax-name-variable-instance: #cbf0f8;
-$light-syntax-name-variable-magic: #cbf0f8;
-$light-syntax-name-variable: #cbf0f8;
-$light-syntax-name: #cbf0f8;
-$light-syntax-number-bin: #1592e1;
-$light-syntax-number-float: #1592e1;
-$light-syntax-number-hex: #1592e1;
-$light-syntax-number-integer-long: #1592e1;
-$light-syntax-number-integer: #1592e1;
-$light-syntax-number-oct: #1592e1;
-$light-syntax-number: #1592e1;
+$light-syntax-name-decorator: #0577b6;
+$light-syntax-name-entity: #02033b;
+$light-syntax-name-exception: #0577b6;
+$light-syntax-name-function-magic: #0577b6;
+$light-syntax-name-function: #0577b6;
+$light-syntax-name-label: #7206b7;
+$light-syntax-name-namespace: #02033b;
+$light-syntax-name-other: #0577b6;
+$light-syntax-name-property: #0577b6;
+$light-syntax-name-tag: #7206b7;
+$light-syntax-name-variable-class: #02033b;
+$light-syntax-name-variable-global: #02033b;
+$light-syntax-name-variable-instance: #02033b;
+$light-syntax-name-variable-magic: #02033b;
+$light-syntax-name-variable: #02033b;
+$light-syntax-name: #02033b;
+$light-syntax-number-bin: #7206b7;
+$light-syntax-number-float: #7206b7;
+$light-syntax-number-hex: #7206b7;
+$light-syntax-number-integer-long: #7206b7;
+$light-syntax-number-integer: #7206b7;
+$light-syntax-number-oct: #7206b7;
+$light-syntax-number: #7206b7;
 $light-syntax-operator-word: #ff9201;
 $light-syntax-operator: #ff9201;
-$light-syntax-punctuation: #cbf0f8;
-$light-syntax-string-affix: #ff6d00;
-$light-syntax-string-backtick: #ff6d00;
-$light-syntax-string-char: #ff6d00;
-$light-syntax-string-delimiter: #ff6d00;
-$light-syntax-string-doc: #ff6d00;
-$light-syntax-string-double: #ff6d00;
-$light-syntax-string-escape: #21daff;
-$light-syntax-string-heredoc: #ff6d00;
-$light-syntax-string-interpol: #ff6d00;
-$light-syntax-string-other: #ff6d00;
-$light-syntax-string-regex: #ff6d00;
-$light-syntax-string-single: #ff6d00;
-$light-syntax-string-symbol: #ff6d00;
-$light-syntax-string: #ff6d00;
-$light-syntax-text-whitespace: #cbf0f8;
+$light-syntax-punctuation: #7206b7;
+$light-syntax-string-affix: #ff5500;
+$light-syntax-string-backtick: #ff5500;
+$light-syntax-string-char: #ff5500;
+$light-syntax-string-delimiter: #ff5500;
+$light-syntax-string-doc: #ff5500;
+$light-syntax-string-double: #ff5500;
+$light-syntax-string-escape: #0577b6;
+$light-syntax-string-heredoc: #ff5500;
+$light-syntax-string-interpol: #ff5500;
+$light-syntax-string-other: #ff5500;
+$light-syntax-string-regex: #ff5500;
+$light-syntax-string-single: #ff5500;
+$light-syntax-string-symbol: #ff5500;
+$light-syntax-string: #ff5500;
+$light-syntax-text-whitespace: #02033b;
 // ----------------------------------------------------------------------------
 // aloha dark-mode syntax theme
 // ----------------------------------------------------------------------------
-$dark-syntax-text: #02033b;
-$dark-syntax-container-color: #cbf0f8;
+$dark-syntax-text: #cc5801;
+$dark-syntax-container-color: #fff6eb;
 $dark-syntax-comment-hashbang: #04045e;
 $dark-syntax-comment-multiline: #04045e;
 $dark-syntax-comment-preproc: #04045e;
@@ -120,27 +120,27 @@ $dark-syntax-name-entity: #02033b;
 $dark-syntax-name-exception: #0577b6;
 $dark-syntax-name-function-magic: #0577b6;
 $dark-syntax-name-function: #0577b6;
-$dark-syntax-name-label: #d15300;
+$dark-syntax-name-label: #7206b7;
 $dark-syntax-name-namespace: #02033b;
 $dark-syntax-name-other: #0577b6;
 $dark-syntax-name-property: #0577b6;
-$dark-syntax-name-tag: #d15300;
+$dark-syntax-name-tag: #7206b7;
 $dark-syntax-name-variable-class: #02033b;
 $dark-syntax-name-variable-global: #02033b;
 $dark-syntax-name-variable-instance: #02033b;
 $dark-syntax-name-variable-magic: #02033b;
 $dark-syntax-name-variable: #02033b;
 $dark-syntax-name: #02033b;
-$dark-syntax-number-bin: #1592e1;
-$dark-syntax-number-float: #1592e1;
-$dark-syntax-number-hex: #1592e1;
-$dark-syntax-number-integer-long: #1592e1;
-$dark-syntax-number-integer: #1592e1;
-$dark-syntax-number-oct: #1592e1;
-$dark-syntax-number: #1592e1;
+$dark-syntax-number-bin: #7206b7;
+$dark-syntax-number-float: #7206b7;
+$dark-syntax-number-hex: #7206b7;
+$dark-syntax-number-integer-long: #7206b7;
+$dark-syntax-number-integer: #7206b7;
+$dark-syntax-number-oct: #7206b7;
+$dark-syntax-number: #7206b7;
 $dark-syntax-operator-word: #ff9201;
 $dark-syntax-operator: #ff9201;
-$dark-syntax-punctuation: #02033b;
+$dark-syntax-punctuation: #7206b7;
 $dark-syntax-string-affix: #ff5500;
 $dark-syntax-string-backtick: #ff5500;
 $dark-syntax-string-char: #ff5500;
