--- a/_sass/yolo/brand/theme/_aloha.scss
+++ b/_sass/yolo/brand/theme/_aloha.scss
@@ -8,35 +8,35 @@ $font-family-monospace: "Roboto Mono", monospace;
 // aloha light-mode
 // ----------------------------------------------------------------------------
 // primary colors
-$light-primary-color: #daf6fc;
-$light-on-primary-color: #02033b;
-$light-primary-container-color: #22c6ed;
-$light-on-primary-container-color: #04045e;
+$light-primary-color: #fff6eb;
+$light-on-primary-color: #cc5801;
+$light-primary-container-color: #ff6d00;
+$light-on-primary-container-color: #02033b;
 // secondary colors
-$light-secondary-color: #04045e;
-$light-on-secondary-color: #ebefff;
-$light-secondary-container-color: #fff7eb;
-$light-on-secondary-container-color: #ff6d00;
+$light-secondary-color: #ff6d00;
+$light-on-secondary-color: #fff6eb;
+$light-secondary-container-color: #daf6fc;
+$light-on-secondary-container-color: #15a9d0;
 // tertiary colors
-$light-tertiary-color: #ff6d00;
-$light-on-tertiary-color: #fff4eb;
+$light-tertiary-color: #15a9d0;
+$light-on-tertiary-color: #daf6fc;
 // link colors
-$light-link-color: #1592e1;
+$light-link-color: #7206b7;
 // ----------------------------------------------------------------------------
 // aloha dark-mode
 // ----------------------------------------------------------------------------
 // primary colors
-$dark-primary-color: #02033b;
-$dark-on-primary-color: #ff9f00;
-$dark-primary-container-color: #0bb4d8;
-$dark-on-primary-container-color: #04045e;
+$dark-primary-color: #daf6fc;
+$dark-on-primary-color: #095c71;
+$dark-primary-container-color: #15b9e2;
+$dark-on-primary-container-color: #02033b;
 // secondary colors
-$dark-secondary-color: #ff6d00;
-$dark-on-secondary-color: #02033b;
-$dark-secondary-container-color: #cbf0f8;
-$dark-on-secondary-container-color: #02033b;
+$dark-secondary-color: #15a9d0;
+$dark-on-secondary-color: #daf6fc;
+$dark-secondary-container-color: #fff7eb;
+$dark-on-secondary-container-color: #ff6d00;
 // tertiary colors
-$dark-tertiary-color: #21daff;
-$dark-on-tertiary-color: #04045e;
+$dark-tertiary-color: #ff6d00;
+$dark-on-tertiary-color: #fff4eb;
 // link colors
-$dark-link-color: #1592e1;
+$dark-link-color: #7206b7;
