Improve my personal theme

--- a/_sass/yolo/brand/_colors.scss
+++ b/_sass/yolo/brand/_colors.scss
@@ -18,7 +18,7 @@ $light-on-neutral-color: #e0e0e0;
 $light-error-color: #b71c1c;
 $light-on-error-color: #ffcdd2;
 $light-warn-color: #ffee58;
-$light-on-warn-color: #6d6400;
+$light-on-warn-color: #212121;
 $light-info-color: #1565c0;
 $light-on-info-color: #bbdefb;
 $dark-neutral-color: #e0e0e0;
@@ -26,7 +26,7 @@ $dark-on-neutral-color: #212121;
 $dark-error-color: #b71c1c;
 $dark-on-error-color: #ffcdd2;
 $dark-warn-color: #ffee58;
-$dark-on-warn-color: #6d6400;
+$dark-on-warn-color: #212121;
 $dark-info-color: #1565c0;
 $dark-on-info-color: #bbdefb;
 // ----------------------------------------------------------------------------
