Update version to v1.4

--- a/_includes/demo/syntax-theme-swatches.html
+++ b/_includes/demo/syntax-theme-swatches.html
@@ -21,7 +21,7 @@
     </div>
     <h4 class="no-toc">Syntax Tokens</h4>
     <blockquote>
-        <p><strong>Note</strong>: Click each Syntax Token pill to see the syntax-theme colors in use.</p>
+        <p><strong>Tip</strong>: Click a pill to see the colors.</p>
     </blockquote>
     <div class="yolo-tabs">
         <button class="yolo-tab-button yolo-tab-links" data-open-tab="nameTokens">Name</button>
