--- a/_sass/yolo/brand/theme/_corbs.scss
+++ b/_sass/yolo/brand/theme/_corbs.scss
@@ -16,7 +16,7 @@ $light-on-primary-container-color: #16004f;
 $light-secondary-color: #3389ed;
 $light-on-secondary-color: #f1ecff;
 $light-secondary-container-color: #280873;
-$light-on-secondary-container-color: #df21c4;
+$light-on-secondary-container-color: #e126c5;
 // tertiary colors
 $light-tertiary-color: #ac3cf6;
 $light-on-tertiary-color: #f1ecff;
@@ -34,7 +34,7 @@ $dark-on-primary-container-color: #16004f;
 $dark-secondary-color: #21daff;
 $dark-on-secondary-color: #0f0132;
 $dark-secondary-container-color: #280873;
-$dark-on-secondary-container-color: #b5189e;
+$dark-on-secondary-container-color: #e126c5;
 // tertiary colors
 $dark-tertiary-color: #ac3cf6;
 $dark-on-tertiary-color: #0f0132;
