seaside and summer theme

--- a/_sass/yolo/brand/syntax/_seaside.scss
+++ b/_sass/yolo/brand/syntax/_seaside.scss
@@ -1,7 +1,7 @@
 // ----------------------------------------------------------------------------
 // seaside light-mode syntax theme
 // ----------------------------------------------------------------------------
-$light-syntax-container-color: #001b29;
+$light-syntax-container-color: #003552;
 $light-syntax-text: #fefcfb;
 $light-syntax-comment-hashbang: #abe8ff;
 $light-syntax-comment-multiline: #abe8ff;
@@ -41,11 +41,11 @@ $light-syntax-name-entity: #fefcfb;
 $light-syntax-name-exception: #fefcfb;
 $light-syntax-name-function-magic: #01e676;
 $light-syntax-name-function: #01e676;
-$light-syntax-name-label: #fd917a;
+$light-syntax-name-label: #1cbad9;
 $light-syntax-name-namespace: #fefcfb;
 $light-syntax-name-other: #fefcfb;
 $light-syntax-name-property: #01e676;
-$light-syntax-name-tag: #fd917a;
+$light-syntax-name-tag: #1cbad9;
 $light-syntax-name-variable-class: #0bb4d8;
 $light-syntax-name-variable-global: #0bb4d8;
 $light-syntax-name-variable-instance: #0bb4d8;
@@ -62,97 +62,97 @@ $light-syntax-number: #90e0ef;
 $light-syntax-operator-word: #0bb4d8;
 $light-syntax-operator: #0bb4d8;
 $light-syntax-punctuation: #fefcfb;
-$light-syntax-string-affix: #f95838;
-$light-syntax-string-backtick: #f95838;
-$light-syntax-string-char: #f95838;
-$light-syntax-string-delimiter: #f95838;
-$light-syntax-string-doc: #f95838;
-$light-syntax-string-double: #f95838;
-$light-syntax-string-escape: #f95838;
-$light-syntax-string-heredoc: #f95838;
-$light-syntax-string-interpol: #f95838;
-$light-syntax-string-other: #f95838;
-$light-syntax-string-regex: #f95838;
-$light-syntax-string-single: #f95838;
-$light-syntax-string-symbol: #f95838;
-$light-syntax-string: #f95838;
+$light-syntax-string-affix: #1cbad9;
+$light-syntax-string-backtick: #1cbad9;
+$light-syntax-string-char: #1cbad9;
+$light-syntax-string-delimiter: #1cbad9;
+$light-syntax-string-doc: #1cbad9;
+$light-syntax-string-double: #1cbad9;
+$light-syntax-string-escape: #1cbad9;
+$light-syntax-string-heredoc: #1cbad9;
+$light-syntax-string-interpol: #1cbad9;
+$light-syntax-string-other: #1cbad9;
+$light-syntax-string-regex: #1cbad9;
+$light-syntax-string-single: #1cbad9;
+$light-syntax-string-symbol: #1cbad9;
+$light-syntax-string: #1cbad9;
 $light-syntax-text-whitespace: #fefcfb;
 // ----------------------------------------------------------------------------
 // seaside dark-mode syntax theme
 // ----------------------------------------------------------------------------
-$dark-syntax-container-color: #dbf5fa;
-$dark-syntax-text: #0a3e47;
-$dark-syntax-comment-hashbang: #025a7a;
-$dark-syntax-comment-multiline: #025a7a;
-$dark-syntax-comment-preproc: #025a7a;
-$dark-syntax-comment-preprocfile: #025a7a;
-$dark-syntax-comment-single: #025a7a;
-$dark-syntax-comment-special: #025a7a;
-$dark-syntax-comment: #025a7a;
+$dark-syntax-container-color: #003552;
+$dark-syntax-text: #fefcfb;
+$dark-syntax-comment-hashbang: #abe8ff;
+$dark-syntax-comment-multiline: #abe8ff;
+$dark-syntax-comment-preproc: #abe8ff;
+$dark-syntax-comment-preprocfile: #abe8ff;
+$dark-syntax-comment-single: #abe8ff;
+$dark-syntax-comment-special: #abe8ff;
+$dark-syntax-comment: #abe8ff;
 $dark-syntax-error: #fa0606;
 $dark-syntax-generic-deleted: #fa0606;
-$dark-syntax-generic-emph: #0a3e47;
-$dark-syntax-generic-error: #0a3e47;
-$dark-syntax-generic-heading: #0a3e47;
-$dark-syntax-generic-inserted: #0a3e47;
-$dark-syntax-generic-output: #0a3e47;
-$dark-syntax-generic-prompt: #0a3e47;
-$dark-syntax-generic-strong: #0a3e47;
-$dark-syntax-generic-subheading: #0a3e47;
-$dark-syntax-generic-traceback: #0a3e47;
-$dark-syntax-highlight-line: #0a3e47;
-$dark-syntax-keyword-constant: #0d809b;
-$dark-syntax-keyword-declaration: #0d809b;
-$dark-syntax-keyword-namespace: #0d809b;
-$dark-syntax-keyword-pseudo: #0d809b;
-$dark-syntax-keyword-reserved: #0d809b;
-$dark-syntax-keyword-type: #0d809b;
-$dark-syntax-keyword: #0d809b;
-$dark-syntax-literal-date: #0a3e47;
-$dark-syntax-literal: #0a3e47;
-$dark-syntax-name-attribute: #01a354;
-$dark-syntax-name-builtin-pseudo: #0a3e47;
-$dark-syntax-name-builtin: #0d809b;
-$dark-syntax-name-class: #01a354;
-$dark-syntax-name-constant: #0d809b;
-$dark-syntax-name-decorator: #0a3e47;
-$dark-syntax-name-entity: #0a3e47;
-$dark-syntax-name-exception: #0a3e47;
-$dark-syntax-name-function-magic: #01a354;
-$dark-syntax-name-function: #01a354;
-$dark-syntax-name-label: #fc4b23;
-$dark-syntax-name-namespace: #0a3e47;
-$dark-syntax-name-other: #0a3e47;
-$dark-syntax-name-property: #01a354;
-$dark-syntax-name-tag: #fc4b23;
-$dark-syntax-name-variable-class: #0d809b;
-$dark-syntax-name-variable-global: #0d809b;
-$dark-syntax-name-variable-instance: #0d809b;
-$dark-syntax-name-variable-magic: #0d809b;
-$dark-syntax-name-variable: #0d809b;
-$dark-syntax-name: #0a3e47;
-$dark-syntax-number-bin: #2ac5e1;
-$dark-syntax-number-float: #2ac5e1;
-$dark-syntax-number-hex: #2ac5e1;
-$dark-syntax-number-integer-long: #2ac5e1;
-$dark-syntax-number-integer: #2ac5e1;
-$dark-syntax-number-oct: #2ac5e1;
-$dark-syntax-number: #2ac5e1;
-$dark-syntax-operator-word: #075464;
-$dark-syntax-operator: #075464;
-$dark-syntax-punctuation: #0a3e47;
-$dark-syntax-string-affix: #f95838;
-$dark-syntax-string-backtick: #f95838;
-$dark-syntax-string-char: #f95838;
-$dark-syntax-string-delimiter: #f95838;
-$dark-syntax-string-doc: #f95838;
-$dark-syntax-string-double: #f95838;
-$dark-syntax-string-escape: #f95838;
-$dark-syntax-string-heredoc: #f95838;
-$dark-syntax-string-interpol: #f95838;
-$dark-syntax-string-other: #f95838;
-$dark-syntax-string-regex: #f95838;
-$dark-syntax-string-single: #f95838;
-$dark-syntax-string-symbol: #f95838;
-$dark-syntax-string: #f95838;
-$dark-syntax-text-whitespace: #0a3e47;
+$dark-syntax-generic-emph: #fefcfb;
+$dark-syntax-generic-error: #fefcfb;
+$dark-syntax-generic-heading: #fefcfb;
+$dark-syntax-generic-inserted: #fefcfb;
+$dark-syntax-generic-output: #fefcfb;
+$dark-syntax-generic-prompt: #fefcfb;
+$dark-syntax-generic-strong: #fefcfb;
+$dark-syntax-generic-subheading: #fefcfb;
+$dark-syntax-generic-traceback: #fefcfb;
+$dark-syntax-highlight-line: #fefcfb;
+$dark-syntax-keyword-constant: #0bb4d8;
+$dark-syntax-keyword-declaration: #0bb4d8;
+$dark-syntax-keyword-namespace: #0bb4d8;
+$dark-syntax-keyword-pseudo: #0bb4d8;
+$dark-syntax-keyword-reserved: #0bb4d8;
+$dark-syntax-keyword-type: #0bb4d8;
+$dark-syntax-keyword: #0bb4d8;
+$dark-syntax-literal-date: #fefcfb;
+$dark-syntax-literal: #fefcfb;
+$dark-syntax-name-attribute: #01e676;
+$dark-syntax-name-builtin-pseudo: #fefcfb;
+$dark-syntax-name-builtin: #0bb4d8;
+$dark-syntax-name-class: #01e676;
+$dark-syntax-name-constant: #0bb4d8;
+$dark-syntax-name-decorator: #fefcfb;
+$dark-syntax-name-entity: #fefcfb;
+$dark-syntax-name-exception: #fefcfb;
+$dark-syntax-name-function-magic: #01e676;
+$dark-syntax-name-function: #01e676;
+$dark-syntax-name-label: #1cbad9;
+$dark-syntax-name-namespace: #fefcfb;
+$dark-syntax-name-other: #fefcfb;
+$dark-syntax-name-property: #01e676;
+$dark-syntax-name-tag: #1cbad9;
+$dark-syntax-name-variable-class: #0bb4d8;
+$dark-syntax-name-variable-global: #0bb4d8;
+$dark-syntax-name-variable-instance: #0bb4d8;
+$dark-syntax-name-variable-magic: #0bb4d8;
+$dark-syntax-name-variable: #0bb4d8;
+$dark-syntax-name: #fefcfb;
+$dark-syntax-number-bin: #90e0ef;
+$dark-syntax-number-float: #90e0ef;
+$dark-syntax-number-hex: #90e0ef;
+$dark-syntax-number-integer-long: #90e0ef;
+$dark-syntax-number-integer: #90e0ef;
+$dark-syntax-number-oct: #90e0ef;
+$dark-syntax-number: #90e0ef;
+$dark-syntax-operator-word: #0bb4d8;
+$dark-syntax-operator: #0bb4d8;
+$dark-syntax-punctuation: #fefcfb;
+$dark-syntax-string-affix: #1cbad9;
+$dark-syntax-string-backtick: #1cbad9;
+$dark-syntax-string-char: #1cbad9;
+$dark-syntax-string-delimiter: #1cbad9;
+$dark-syntax-string-doc: #1cbad9;
+$dark-syntax-string-double: #1cbad9;
+$dark-syntax-string-escape: #1cbad9;
+$dark-syntax-string-heredoc: #1cbad9;
+$dark-syntax-string-interpol: #1cbad9;
+$dark-syntax-string-other: #1cbad9;
+$dark-syntax-string-regex: #1cbad9;
+$dark-syntax-string-single: #1cbad9;
+$dark-syntax-string-symbol: #1cbad9;
+$dark-syntax-string: #1cbad9;
+$dark-syntax-text-whitespace: #fefcfb;
