--- a/_sass/yolo/brand/syntax/_summer.scss
+++ b/_sass/yolo/brand/syntax/_summer.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// aloha light-mode syntax theme
+// summer light-mode syntax theme
 // ----------------------------------------------------------------------------
 $light-syntax-text: #095c71;
 $light-syntax-container-color: #daf6fc;
@@ -78,7 +78,7 @@ $light-syntax-string-symbol: #ff5500;
 $light-syntax-string: #ff5500;
 $light-syntax-text-whitespace: #02033b;
 // ----------------------------------------------------------------------------
-// aloha dark-mode syntax theme
+// summer dark-mode syntax theme
 // ----------------------------------------------------------------------------
 $dark-syntax-text: #cc5801;
 $dark-syntax-container-color: #fff6eb;
