--- a/_sass/yolo/brand/theme/_seaside.scss
+++ b/_sass/yolo/brand/theme/_seaside.scss
@@ -8,35 +8,35 @@ $font-family-monospace: "Source Code Pro", monospace;
 // seaside light-mode
 // ----------------------------------------------------------------------------
 // primary colors
-$light-primary-color: #eefafc;
-$light-on-primary-color: #0a3e47;
-$light-primary-container-color: #0a3e47;
-$light-on-primary-container-color: #dbf5fa;
+$light-primary-color: #cbf0f8;
+$light-on-primary-color: #003552;
+$light-primary-container-color: #1cbad9;
+$light-on-primary-container-color: #003552;
 // secondary colors  
-$light-secondary-color: #015d8f;
-$light-on-secondary-color: #dbf5fa;
-$light-secondary-container-color: #dbf5fa;
-$light-on-secondary-container-color: #015d8f;
+$light-secondary-color: #1cbad9;
+$light-on-secondary-color: #003552;
+$light-secondary-container-color: #cbf0f8;
+$light-on-secondary-container-color: #0577b6;
 // tertiary colors
-$light-tertiary-color: #f95838;
-$light-on-tertiary-color: #f9e1dc;
+$light-tertiary-color: #04045e;
+$light-on-tertiary-color: #cbf0f8;
 // link colors
-$light-link-color: #0bb4d8;
+$light-link-color: #04045e;
 // ----------------------------------------------------------------------------
 // seaside dark-mode
 // ----------------------------------------------------------------------------
 // primary colors
-$dark-primary-color: #001b29;
-$dark-on-primary-color: #eefafc;
-$dark-primary-container-color: #dbf5fa;
-$dark-on-primary-container-color: #0a3e47;
+$dark-primary-color: #1cbad9;
+$dark-on-primary-color: #003552;
+$dark-primary-container-color: #04045e;
+$dark-on-primary-container-color: #cbf0f8;
 // secondary colors  
-$dark-secondary-color: #5de4ff;
-$dark-on-secondary-color: #002e46;
-$dark-secondary-container-color: #002e46;
-$dark-on-secondary-container-color: #90e0ef;
+$dark-secondary-color: #04045e;
+$dark-on-secondary-color: #cbf0f8;
+$dark-secondary-container-color: #1cbad9;
+$dark-on-secondary-container-color: #005884;
 // tertiary colors
-$dark-tertiary-color: #f95838;
-$dark-on-tertiary-color: #250600;
+$dark-tertiary-color: #cbf0f8;
+$dark-on-tertiary-color: #04045e;
 // link colors
-$dark-link-color: #0692e0;
+$dark-link-color: #cbf0f8;
