--- a/_sass/yolo/brand/theme/_summer.scss
+++ b/_sass/yolo/brand/theme/_summer.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// aloha font-families
+// summer font-families
 // ----------------------------------------------------------------------------
 $font-family-primary: "Manrope", sans-serif;
 $font-family-secondary: "Poppins", sans-serif;
@@ -23,7 +23,7 @@ $light-on-tertiary-color: #daf6fc;
 // link colors
 $light-link-color: #7206b7;
 // ----------------------------------------------------------------------------
-// aloha dark-mode
+// summer dark-mode
 // ----------------------------------------------------------------------------
 // primary colors
 $dark-primary-color: #daf6fc;
